--- a/Tensorflow_Training/AlexNet.ipynb
+++ b/Tensorflow_Training/AlexNet.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from keras import layers, models"
    ]
   },
   {
@@ -14,9 +15,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(tf.version)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
