--- a/Artificial Intelegence/Perceptron/FinalLearning_Perceptron.ipynb
+++ b/Artificial Intelegence/Perceptron/FinalLearning_Perceptron.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 248,
    "id": "d17f1571",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 249,
    "id": "5fb202f1",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 250,
    "id": "fed515a9",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 251,
    "id": "10df9094",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 252,
    "id": "b273f7a6",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 253,
    "id": "12244d3c",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " initial input : [0.8127834 0.6694991 0.4715   ], initial bias : [0.93205037]\n"
+      " initial input : [0.32172512 0.84479404 0.57892639], initial bias : [0.25639957]\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 254,
    "id": "a8f6a84e",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.61312494]\n"
+      "[1.66414465]\n"
      ]
     }
    ],
@@ -243,28 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 255,
    "id": "0243b7ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.3198735]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "MSE = 0\n",
+    "# MSE = 0\n",
     "\n",
-    "for i in range(len(x_train)):\n",
-    "    y_predict = np.dot(x_train[i], weight) + bias\n",
-    "    error = y_train[i] - y_predict\n",
-    "    MSE   += error * error\n",
+    "# for i in range(len(x_train)):\n",
+    "#     y_predict = np.dot(x_train[i], weight) + bias\n",
+    "#     error = y_train[i] - y_predict\n",
+    "#     MSE   += error * error\n",
     "\n",
-    "MSE = MSE / len(x_train)\n",
-    "print(MSE)"
+    "# MSE = MSE / len(x_train)\n",
+    "# print(MSE)"
    ]
   },
   {
@@ -279,13 +271,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 256,
    "id": "85f3f939",
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate   : float = 0.01\n",
-    "epoch           : int = 10"
+    "learning_rate   = 0.01\n",
+    "epoch           = 10"
    ]
   },
   {
@@ -293,26 +285,51 @@
    "execution_count": null,
    "id": "2d71315b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UFuncTypeError",
+     "evalue": "Cannot cast ufunc 'add' output from dtype('O') to dtype('float64') with casting rule 'same_kind'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mUFuncTypeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[257]\u001b[39m\u001b[32m, line 28\u001b[39m\n\u001b[32m     25\u001b[39m     \u001b[38;5;28mprint\u001b[39m(MSE/\u001b[38;5;28mlen\u001b[39m(x_train))\n\u001b[32m     27\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m(epoch > \u001b[32m0\u001b[39m) :\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m     \u001b[43mmodel_fit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     29\u001b[39m     epoch -= \u001b[32m1\u001b[39m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[257]\u001b[39m\u001b[32m, line 14\u001b[39m, in \u001b[36mmodel_fit\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     11\u001b[39m     error     = y_train[i] - y_predict\n\u001b[32m     12\u001b[39m     MSE      += error*error\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m     \u001b[43md_weight\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m=\u001b[49m\u001b[43m  \u001b[49m\u001b[43mx_train\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43merror\u001b[49m\n\u001b[32m     15\u001b[39m     d_bias   +=  error\n\u001b[32m     17\u001b[39m d_weight /= \u001b[38;5;28mlen\u001b[39m(x_train)\n",
+      "\u001b[31mUFuncTypeError\u001b[39m: Cannot cast ufunc 'add' output from dtype('O') to dtype('float64') with casting rule 'same_kind'"
+     ]
+    }
+   ],
    "source": [
     "def model_fit():\n",
-    "\n",
+    "    global weight, bias\n",
     "    # forward propagation\n",
     "\n",
     "    MSE = 0\n",
+    "    d_weight = np.zeros(3)\n",
+    "    d_bias = np.zeros(1)\n",
+    "\n",
     "    for i in range(len(x_train)):\n",
     "        y_predict = np.dot(x_train[i], weight) + bias\n",
-    "        error  = y_train[i] - y_predict\n",
-    "        MSE   += error * error\n",
+    "        error     = y_train[i] - y_predict\n",
+    "        MSE      += error*error\n",
+    "        \n",
+    "        d_weight += -2 * x_train[i] * error\n",
+    "        d_bias   += -2 * error\n",
     "\n",
-    "    MSE = MSE / len(x_train)\n",
-    "    \n",
-    "    # back propagation\n",
+    "    d_weight /= len(x_train)\n",
+    "    d_bias   /= len(x_train)\n",
     "\n",
+    "    print(d_weight)\n",
+    "\n",
+    "    # update parameters\n",
+    "    weight -= learning_rate * d_weight\n",
+    "    bias   -= learning_rate * d_bias\n",
+    "    print(MSE/len(x_train))\n",
     "\n",
     "while(epoch > 0) :\n",
     "    model_fit()\n",
-    "    epoch -= 1"
+    "    epoch -= 1\n",
+    "\n"
    ]
   }
  ],
@@ -332,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
